[package]
name = "hash-rs"
version = "0.1.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]

[dependencies]
twox-hash = "*"
xxhash-rust = { version = "=0.8.5", features = ["xxh64", "xxh3"] }
seahash = "=4.1.0"
highway = "=0.8"
murmurhash3 = "*"
fnv = "*"
blake2-rfc = "*"
regex = "1.1.2"
rand = "0.6.5"
ahash = "*"
rustc-hash = "*"
